2002-07-05  Glynn Foster  <glynn.foster@sun.com>

        * gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
        Now conforms to spec.

2002-06-19  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Change the windows to dialog boxes. Set
     	atk relation between entry box and label, set mnemonics,
     	set default button, change title of dialog to "Actions",
     	position buttons to the right of the tree view. 
     	s/gtk_widget_set_usize/gtk_widget_set_size_request.

2002-06-12  Narayana Pattipati <narayana.pattipati@wipro.com>

        * monitor.c: In mon_read_new_lines function, as new lines are read,
        update the current position and start reading next set of lines from 
        the new position.

        * logrtns.c: In ReadPageDown function fixed a crash when the lines
        read are more than ten. Bug#84084.

2002-06-12  Christophe Merlet  <christophe@merlet.net>

	* Makefile.am: Add $DESTDIR variable.

2002-06-04  George Lebl <jirka@5z.com>

	* logview.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
	that makes translations actually work. _UI_SUBTREE_STOCK means
	that the string comes from libgnomeui which in this case it 
	doesn't.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Update for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct
	place. Fixes #83627.

2002-05-31  Glynn Foster <glynn.foster@sun.com>

	* monitor.c: Remove ugly pangoification in the 
	monitor dialog.

2002-05-31  Glynn Foster <glynn.foster@sun.com>
	
	* Makefile.am: Enable help again. Fixes #83518.

2002-05-25  Glynn Foster <glynn.foster@sun.com>

	* logview.c, actions.c: Some focus issues. Hum, we really
	need to get mnemonics going here.

2002-05-25  Narayana Pattipati <narayana.pattipati@wipro.com>

	* logview.c: Treeview fix to prevent parent and child being
	created for first action entry. Fixes #81942.
